# vulkan-rs

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  LICENSE  README.md  build.rs  extract-docs.py  generate-sources.py  generate.py  generate_sources.py  rustfmt.toml
examples/: README.md  create_command_buffer.rs  create_instance.rs  cube.rs  initialization.rs  triangle.rs  utils.rs
examples/utils/: Cargo.toml
examples/utils/src/: lib.rs
generator/: Cargo.toml  README.md  __init__.py  registry.py  rust.py  specconvert.py  specextract.py  utils.py
generator/src/: case.rs  lib.rs  registry.rs
generator/src/generator/: mod.rs  rust.rs  rust_alias.rs  rust_cmds.rs  rust_types.rs
generator/src/generator/rust/: alias.rs  cmds.rs  mod.rs  types.rs
src/: basic_types.rs  dispatch_commands.rs  dispatch_table.rs  dl.rs  enums.rs  ffi.rs  lib.rs  loader.rs  platform.rs  prelude.rs  protos.rs  safe.rs  types.rs  types_base.rs  types_impl.rs  types_raw.rs  util.rs  utils.rs  wsi.rs
src/cmds/: ffi.rs  mod.rs
tools/generator/: genvk.py  perfect_hash.py  rustgenerator.py
