[package]
name = "vulkan_rs"
version = "0.1.0"
authors = ["Christoph Hommelsheim <c-hommelsheim@gmx.de>"]
license = "BSD-2-Clause"
description = "Vulkan bindings for the rust programming language."
homepage = "https://github.com/HellButcher/vulkan-rs"
repository = "https://github.com/HellButcher/vulkan-rs.git"
readme = "README.md"
build = "build.rs"

[dependencies]

[dev-dependencies]
winit = "0.6"
log = "0.3"
env_logger = "0.4"

[build-dependencies]

#[[example]]
#name = "utils"
#crate-type = ["lib"]

[[example]]
name = "initialization"

[features]
default = [ "VK_USE_PLATFORM_DEFAULT" ]
VK_USE_PLATFORM_XLIB_KHR = []
VK_USE_PLATFORM_XLIB_XRANDR_EXT = [ "VK_USE_PLATFORM_XLIB_KHR" ]
VK_USE_PLATFORM_XCB_KHR = []
VK_USE_PLATFORM_WAYLAND_KHR = []
VK_USE_PLATFORM_MIR_KHR = []
VK_USE_PLATFORM_ANDROID_KHR = []
VK_USE_PLATFORM_WIN32_KHR = []
VK_USE_PLATFORM_WIN32_KHX = [ "VK_USE_PLATFORM_WIN32_KHR" ]
VK_USE_PLATFORM_IOS_MVK = []
VK_USE_PLATFORM_MACOS_MVK = []
VK_USE_PLATFORM_VI_NN = []
# When enabeling VK_USE_PLATFORM_DEFAULT, the default plaftorm features for the
# current target (see abobe) will be automatically enabled.
# For example, when target_os="android" the VK_USE_PLATFORM_ANDROID_KHR feature
# will be enabled. (see build.rs)
VK_USE_PLATFORM_DEFAULT = []

[package.metadata.release]
no-dev-version = true
pre-release-commit-message = "release {{version}}"
pre-release-replacements = [
  {file="README.md", search="(?m)^vulkan_rs = \"[a-z0-9\\.-]+\"$", replace="vulkan_rs = \"{{version}}\""}
]
