[package]
name = "vulkan_rs"
version = "0.4.0"
authors = ["Christoph Hommelsheim <hellbutcher@gmx.de>"]
license = "BSD-2-Clause"
description = "Vulkan bindings for the rust programming language."
homepage = "https://github.com/HellButcher/vulkan-rs"
repository = "https://github.com/HellButcher/vulkan-rs.git"
readme = "README.md"
build = "build.rs"
include = [
  "/Cargo.toml",
  "/LICENSE",
  "/README.md",
  "/build.rs",
  "/src/**",
  "/examples/**",
  "/tests/**",
  "/benches/**",
]

[badges]
travis-ci = { repository = "HellButcher/vulkan-rs", branch = "master" }

[dependencies]
log = "0.4"
bitflags = "1.0"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
kernel32-sys = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
winit = "0.14"
log = "0.4"
env_logger = "0.5"

[build-dependencies]
shaderc = "0.3"
rustc_version = "0.2"

[features]
default = [ "VK_USE_PLATFORM_DEFAULT", "VK_default_extensions" ]
VK_default_extensions = [ "VK_surface_extensions", "VK_KHR_swapchain", "VK_EXT_debug_report" ]
VK_surface_extensions = [ "VK_KHR_surface", "VK_KHR_xlib_surface", "VK_KHR_xcb_surface", "VK_KHR_wayland_surface", "VK_KHR_mir_surface", "VK_KHR_android_surface", "VK_MVK_ios_surface", "VK_MVK_macos_surface", "VK_NN_vi_surface" ]

# When enabeling VK_USE_PLATFORM_DEFAULT, the default plaftorm features for the
# current target (see abobe) will be automatically enabled.
# For example, when target_os="android" the VK_USE_PLATFORM_ANDROID_KHR feature
# will be enabled. (see build.rs)
VK_USE_PLATFORM_DEFAULT = []

#START OF VULKAN PLATFORMS
VK_USE_PLATFORM_XLIB_KHR = []
VK_USE_PLATFORM_XLIB_XRANDR_EXT = [ "VK_USE_PLATFORM_XLIB_KHR" ]
VK_USE_PLATFORM_XCB_KHR = []
VK_USE_PLATFORM_WAYLAND_KHR = []
VK_USE_PLATFORM_MIR_KHR = []
VK_USE_PLATFORM_ANDROID_KHR = []
VK_USE_PLATFORM_WIN32_KHR = []
VK_USE_PLATFORM_IOS_MVK = []
VK_USE_PLATFORM_MACOS_MVK = [  ]
VK_USE_PLATFORM_VI_NN = []
#END OF VULKAN PLATFORMS

#START OF VULKAN FEATURES
VK_AMD_buffer_marker = []
VK_AMD_draw_indirect_count = []
VK_AMD_gcn_shader = []
VK_AMD_gpu_shader_half_float = []
VK_AMD_gpu_shader_int16 = []
VK_AMD_mixed_attachment_samples = []
VK_AMD_negative_viewport_height = []
VK_AMD_rasterization_order = []
VK_AMD_shader_ballot = []
VK_AMD_shader_explicit_vertex_parameter = []
VK_AMD_shader_fragment_mask = []
VK_AMD_shader_image_load_store_lod = []
VK_AMD_shader_info = []
VK_AMD_shader_trinary_minmax = []
VK_AMD_texture_gather_bias_lod = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_acquire_xlib_display = ["VK_EXT_direct_mode_display"]
VK_EXT_blend_operation_advanced = []
VK_EXT_conservative_rasterization = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_debug_marker = ["VK_EXT_debug_report"]
VK_EXT_debug_report = []
VK_EXT_depth_range_unrestricted = []
VK_EXT_direct_mode_display = ["VK_KHR_display"]
VK_EXT_discard_rectangles = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_display_control = ["VK_EXT_display_surface_counter", "VK_KHR_swapchain"]
VK_EXT_display_surface_counter = ["VK_KHR_display"]
VK_EXT_external_memory_dma_buf = ["VK_KHR_external_memory_fd"]
VK_EXT_external_memory_host = ["VK_KHR_external_memory"]
VK_EXT_global_priority = []
VK_EXT_hdr_metadata = ["VK_KHR_swapchain"]
VK_EXT_post_depth_coverage = []
VK_EXT_queue_family_foreign = ["VK_KHR_external_memory"]
VK_EXT_sample_locations = []
VK_EXT_sampler_filter_minmax = ["VK_KHR_get_physical_device_properties2"]
VK_EXT_shader_stencil_export = []
VK_EXT_shader_subgroup_ballot = []
VK_EXT_shader_subgroup_vote = []
VK_EXT_shader_viewport_index_layer = []
VK_EXT_swapchain_colorspace = ["VK_KHR_surface"]
VK_EXT_validation_cache = []
VK_EXT_validation_flags = []
VK_GOOGLE_display_timing = ["VK_KHR_swapchain"]
VK_IMG_filter_cubic = []
VK_IMG_format_pvrtc = []
VK_KHR_16bit_storage = ["VK_KHR_get_physical_device_properties2", "VK_KHR_storage_buffer_storage_class"]
VK_KHR_android_surface = ["VK_KHR_surface"]
VK_KHR_bind_memory2 = []
VK_KHR_dedicated_allocation = ["VK_KHR_get_memory_requirements2"]
VK_KHR_descriptor_update_template = []
VK_KHR_display = ["VK_KHR_surface"]
VK_KHR_display_swapchain = ["VK_KHR_swapchain", "VK_KHR_display"]
VK_KHR_external_fence = ["VK_KHR_external_fence_capabilities"]
VK_KHR_external_fence_capabilities = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_external_fence_fd = ["VK_KHR_external_fence"]
VK_KHR_external_fence_win32 = ["VK_KHR_external_fence"]
VK_KHR_external_memory = ["VK_KHR_external_memory_capabilities"]
VK_KHR_external_memory_capabilities = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_external_memory_fd = ["VK_KHR_external_memory"]
VK_KHR_external_memory_win32 = ["VK_KHR_external_memory"]
VK_KHR_external_semaphore = ["VK_KHR_external_semaphore_capabilities"]
VK_KHR_external_semaphore_capabilities = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_external_semaphore_fd = ["VK_KHR_external_semaphore"]
VK_KHR_external_semaphore_win32 = ["VK_KHR_external_semaphore"]
VK_KHR_get_memory_requirements2 = []
VK_KHR_get_physical_device_properties2 = []
VK_KHR_get_surface_capabilities2 = ["VK_KHR_surface"]
VK_KHR_image_format_list = []
VK_KHR_incremental_present = ["VK_KHR_swapchain"]
VK_KHR_maintenance1 = []
VK_KHR_maintenance2 = []
VK_KHR_mir_surface = ["VK_KHR_surface"]
VK_KHR_push_descriptor = ["VK_KHR_get_physical_device_properties2"]
VK_KHR_relaxed_block_layout = []
VK_KHR_sampler_mirror_clamp_to_edge = []
VK_KHR_sampler_ycbcr_conversion = ["VK_KHR_maintenance1", "VK_KHR_bind_memory2", "VK_KHR_get_memory_requirements2", "VK_KHR_get_physical_device_properties2"]
VK_KHR_shader_draw_parameters = []
VK_KHR_shared_presentable_image = ["VK_KHR_swapchain", "VK_KHR_get_physical_device_properties2", "VK_KHR_get_surface_capabilities2"]
VK_KHR_storage_buffer_storage_class = []
VK_KHR_surface = []
VK_KHR_swapchain = ["VK_KHR_surface"]
VK_KHR_variable_pointers = ["VK_KHR_get_physical_device_properties2", "VK_KHR_storage_buffer_storage_class"]
VK_KHR_wayland_surface = ["VK_KHR_surface"]
VK_KHR_win32_keyed_mutex = ["VK_KHR_external_memory_win32"]
VK_KHR_win32_surface = ["VK_KHR_surface"]
VK_KHR_xcb_surface = ["VK_KHR_surface"]
VK_KHR_xlib_surface = ["VK_KHR_surface"]
VK_KHX_device_group = ["VK_KHX_device_group_creation"]
VK_KHX_device_group_creation = []
VK_KHX_multiview = ["VK_KHR_get_physical_device_properties2"]
VK_MVK_ios_surface = ["VK_KHR_surface"]
VK_MVK_macos_surface = ["VK_KHR_surface"]
VK_NN_vi_surface = ["VK_KHR_surface"]
VK_NVX_device_generated_commands = []
VK_NVX_multiview_per_view_attributes = ["VK_KHX_multiview"]
VK_NV_clip_space_w_scaling = []
VK_NV_dedicated_allocation = []
VK_NV_external_memory = ["VK_NV_external_memory_capabilities"]
VK_NV_external_memory_capabilities = []
VK_NV_external_memory_win32 = ["VK_NV_external_memory"]
VK_NV_fill_rectangle = []
VK_NV_fragment_coverage_to_color = []
VK_NV_framebuffer_mixed_samples = []
VK_NV_geometry_shader_passthrough = []
VK_NV_glsl_shader = []
VK_NV_sample_mask_override_coverage = []
VK_NV_viewport_array2 = []
VK_NV_viewport_swizzle = []
VK_NV_win32_keyed_mutex = ["VK_NV_external_memory_win32"]
#END OF VULKAN FEATURES
